--- a/android-demo/src/main/res/layout/fragment_terminal.xml
+++ b/android-demo/src/main/res/layout/fragment_terminal.xml
@@ -20,6 +20,7 @@
 
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
+                  android:padding="8dp"
                   android:text="Terminal"
                   android:textStyle="bold"/>
 
@@ -38,6 +39,7 @@
 
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
+                  android:padding="8dp"
                   android:text="Card"
                   android:textStyle="bold"/>
 
