--- a/android-demo/src/main/res/layout/fragment_terminal.xml
+++ b/android-demo/src/main/res/layout/fragment_terminal.xml
@@ -21,7 +21,7 @@
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="8dp"
-                  android:text="Terminal"
+                  android:text="@string/terminal_info_title"
                   android:textStyle="bold"/>
 
     </android.support.v7.widget.CardView>
@@ -40,7 +40,7 @@
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="8dp"
-                  android:text="Card"
+                  android:text="@string/card_info_title"
                   android:textStyle="bold"/>
 
     </android.support.v7.widget.CardView>
