Various UI enhancements

--- a/android-demo/src/main/res/layout/fragment_about.xml
+++ b/android-demo/src/main/res/layout/fragment_about.xml
@@ -4,4 +4,17 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:textStyle="bold"
+              android:text="OpenJavaCard"/>
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:textStyle="bold"
+              android:text="SmartcardIO Demo"/>
+
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="This app demonstrates use of our SmartcardIO implementation to access smart cards and other secure elements via NFC and OMAPI."/>
+
 </LinearLayout>
