--- a/android-demo/src/main/res/layout/fragment_terminal.xml
+++ b/android-demo/src/main/res/layout/fragment_terminal.xml
@@ -18,11 +18,50 @@
             android:layout_height="wrap_content"
             card_view:cardCornerRadius="4dp">
 
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:padding="8dp"
-                  android:text="@string/terminal_info_title"
-                  android:textStyle="bold"/>
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="vertical">
+            <TextView android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:padding="8dp"
+                      android:text="@string/terminal_info_title"
+                      android:textSize="18sp"
+                      android:textStyle="bold"/>
+            <TableLayout android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:stretchColumns="1">
+                <TableRow android:layout_width="match_parent"
+                          android:layout_height="wrap_content">
+                    <TextView android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:padding="8dp"
+                              android:text="Class"
+                              android:textStyle="bold"
+                              android:textAlignment="textStart"/>
+                    <TextView android:id="@+id/terminal_info_class"
+                              android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:padding="8dp"
+                              android:text="ABCDABCD"
+                              android:textAlignment="textEnd"/>
+                </TableRow>
+                <TableRow android:layout_width="match_parent"
+                          android:layout_height="wrap_content">
+                    <TextView android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:padding="8dp"
+                              android:text="Name"
+                              android:textStyle="bold"
+                              android:textAlignment="textStart"/>
+                    <TextView android:id="@+id/terminal_info_name"
+                              android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:padding="8dp"
+                              android:text="ABCDABCD"
+                              android:textAlignment="textEnd"/>
+                </TableRow>
+            </TableLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
@@ -37,11 +76,65 @@
             android:layout_height="wrap_content"
             card_view:cardCornerRadius="4dp">
 
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:padding="8dp"
-                  android:text="@string/card_info_title"
-                  android:textStyle="bold"/>
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="vertical">
+            <TextView android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:padding="8dp"
+                      android:text="@string/card_info_title"
+                      android:textSize="18sp"
+                      android:textStyle="bold"/>
+            <TableLayout android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:stretchColumns="1">
+                <TableRow android:layout_width="match_parent"
+                          android:layout_height="wrap_content">
+                    <TextView android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:padding="8dp"
+                              android:text="Class"
+                              android:textStyle="bold"
+                              android:textAlignment="textStart"/>
+                    <TextView android:id="@+id/card_info_class"
+                              android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:padding="8dp"
+                              android:text="ABCDABCD"
+                              android:textAlignment="textEnd"/>
+                </TableRow>
+                <TableRow android:layout_width="match_parent"
+                          android:layout_height="wrap_content">
+                    <TextView android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:padding="8dp"
+                              android:text="Protocol"
+                              android:textStyle="bold"
+                              android:textAlignment="textStart"/>
+                    <TextView android:id="@+id/card_info_protocol"
+                              android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:padding="8dp"
+                              android:text="ABCDABCD"
+                              android:textAlignment="textEnd"/>
+                </TableRow>
+                <TableRow android:layout_width="match_parent"
+                          android:layout_height="wrap_content">
+                    <TextView android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:padding="8dp"
+                              android:text="ATR"
+                              android:textStyle="bold"
+                              android:textAlignment="textStart"/>
+                    <TextView android:id="@+id/card_info_atr"
+                              android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:padding="8dp"
+                              android:text="ABCDABCD"
+                              android:textAlignment="textEnd"/>
+                </TableRow>
+            </TableLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
